# orchestria

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pypi_release.yml
orchestria/: __about__.py  __init__.py  cli.py  fetch.py  settings.py
orchestria/agent/: __init__.py  agent.py  cli.py  config.py
orchestria/tool/: __init__.py  cli.py  config.py  tool.py
